feat: 컵 이모지 url이 null일 경우 기본 이모지로 반환 로직 구현